<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Spinner
            android:id="@+id/time_period_spinner"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="225dp"
            android:background="@android:drawable/btn_dropdown"
            android:fontFamily="@font/amatic"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amatic_bold"
            android:text="History"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bcsd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/amatic_bold"
            android:text="Orders by Store"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pcdp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="667dp"
            android:fontFamily="@font/amatic_bold"
            android:text="Orders by Drink"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bcms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="1100dp"
            android:fontFamily="@font/amatic_bold"
            android:text="Money Spent in Past Week"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/money_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/amatic_bold"
            android:text="$250"
            android:textColor="@color/white"
            android:textSize="60dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/money_spent_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/amatic_bold"
            android:text="spent on drinks"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_period_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="225dp"
            android:fontFamily="@font/amatic_bold"
            android:text="See statistics for:"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/separationBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/amatic_bold"
            android:text="|"
            android:textColor="@color/white"
            android:textSize="100dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caffeine_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/amatic_bold"
            android:text="350mg"
            android:textColor="@color/white"
            android:textSize="60dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="287dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/amatic_bold"
            android:text="300"
            android:textColor="@color/white"
            android:textSize="60dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caffeine_intake_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/amatic_bold"
            android:text="caffeine consumed"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/separationBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="242dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/amatic_bold"
            android:text="|"
            android:textColor="@color/white"
            android:textSize="100dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_consumed_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/amatic_bold"
            android:text="calories consumed"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChartStoresDrinks"
            android:layout_width="376dp"
            android:layout_height="300dp"
            android:layout_marginTop="340dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_drinks_purchased"
            android:layout_width="381dp"
            android:layout_height="350dp"
            android:layout_marginTop="710dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_money_spent"
            android:layout_width="376dp"
            android:layout_height="500dp"
            android:layout_marginTop="1140dp" />

    </RelativeLayout>
</ScrollView>