...
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_on_black_24dp"
        android:title="@string/title_Map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_Profile" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_History" />

    <item
        android:id="@+id/navigation_recommendations"
        android:icon="@drawable/ic_recs_black_24dp"
...
