...
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amatic_bold"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/firstname"
...
        android:fontFamily="@font/amatic"
        android:text="Full Name"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/amatic"
        android:text="Email"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
...
            android:textStyle="bold"/>

    </RadioGroup>


    <Button
        android:id="@+id/update_profile"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/blue_round_button"
        android:enabled="true"
...
        android:text="Update Profile"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/green_round_button"
            android:enabled="true"
...
